Fix the hidding body behind navbar

--- a/HomeBudgetWebApp/Content/Site.css
+++ b/HomeBudgetWebApp/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 105px;
     padding-bottom: 20px;
 }
 
